# genAI-projects

./: README.md
genAI-customer-support/: agente_de_suporte_langgraph.ipynb  customer-support-notebook.ipynb  main.py  pyproject.toml
genAI-essay-evaluator/: avaliador_de_redacao.ipynb  essay-evaluator-notebook.ipynb  main.py  pyproject.toml
genAI-text-summarizer/: main.py  pyproject.toml  text-summarizer-notebook.ipynb
