[project]
name = "genai-customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.8",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
