[project]
name = "genai-essay-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.7.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

