[project]
name = "genai-text-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.6",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
